sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:3: error: not found: type int
var lgr: int = getNombreValeurs();
         ^AlgSelectionSort:4: error: not found: type int
var jMin: int = 0;
          ^AlgSelectionSort:5: error: not found: type int
var j: int;
       ^AlgSelectionSort:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var j: int;
    ^AlgSelectionSort:6: error: not found: type int
var i: int;
       ^AlgSelectionSort:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var i: int;
    ^